# organize-fd

./: .pre-commit-config.yaml  _main.py  pyproject.toml
src/organize_fd/: __init__.py  _organizer.py
